# lightmd

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  lightmd-viewer.desktop  lightmd_viewer.py  pyproject.toml
scripts/: install_linux.sh  uninstall_linux.sh
src/lightmd/: __init__.py  __main__.py  cli.py  parser.py  viewer.py
src/lightmd/resources/: lightmd.desktop
tests/: test_viewer.py
