[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lightmd"
version = "0.1.0"
description = "Visor Markdown ligero basado en Tkinter"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["markdown", "viewer", "tkinter"]

authors = [
    { name = "José Manuel Cala", email = "jmcala@protonmail.com" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Spanish",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Editors",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/jmcala/lightmd"

[project.scripts]
lightmd = "lightmd.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lightmd = ["resources/*.desktop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
